--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
 	<nav>
 		<div class="container">
 			
-			<span><a href="/">Home</a></span>
+			<span><a href="http://mikeware.github.io/SpaceBattleArena/">Home</a></span>
 			
 			
 			<span>Client Setup</span>
