--- a/dev/index.html
+++ b/dev/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="http://mikeware.github.io/SpaceBattleArena/css/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="http://mikeware.github.io/SpaceBattleArena/css/print.css" media="print">
 
+    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="http://mikeware.github.io/SpaceBattleArena/js/main.js"></script>
+    
     <title>Space Battle Arena by Mikeware</title>
   </head>
 
