* Add Sidebar Capability. (Resolves #9)

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <h2 id="documentation">Documentation</h2>
 <ul>
-  <li><a href="client/index.html">Client Setup</a> - <a href="client/jGRASP/jGRASPSetup.html">jGRASP</a>, Eclipse
+  <li><a href="client/index.html">Client Setup</a> - <a href="client/jGRASP/index.html">jGRASP</a>, Eclipse
     <ul>
       <li>Add both GSon and SpaceBattle jars to classpath</li>
       <li>Create a Ship which implements the Spaceship interface.</li>
@@ -102,16 +102,24 @@
       <li>Shapes in Space</li>
       <li>Intro to Radar</li>
       <li>Finite State Machines</li>
-      <li>Competitions
+    </ul>
+  </li>
+  <li>Guides
+    <ul>
+      <li>World Coordinates and Rotations</li>
+      <li>Objects</li>
+      <li>Coding Call/Response</li>
+      <li>Your Ship’s ‘Computer’</li>
+    </ul>
+  </li>
+  <li>Competitions
+    <ul>
+      <li>Bauble Hunt</li>
+      <li>Asteroid Miner</li>
+      <li>Bauble Hunt SCV</li>
+      <li>King of the Bubble
         <ul>
-          <li>Bauble Hunt</li>
-          <li>Asteroid Miner</li>
-          <li>Bauble Hunt SCV</li>
-          <li>King of the Bubble
-            <ul>
-              <li>King of Space (Variant using King of the Bubble game parameters)</li>
-            </ul>
-          </li>
+          <li>King of Space (Variant using King of the Bubble game parameters)</li>
         </ul>
       </li>
     </ul>
