* Add Eclipse Documentation. (Resolves #11)

--- a/client/index.html
+++ b/client/index.html
@@ -22,9 +22,9 @@
         <h2>A Programming Game in Java for AP CS Students.</h2>
 
         <section id="downloads">
-          <a href="https://github.com/Mikeware/SpaceBattleArena/blob/master/bin/SpaceBattle.jar?raw=true" class="btn">Download Client Jar</a>
-          <a href="https://github.com/Mikeware/SpaceBattleArena/blob/master/bin/SBAserver.zip?raw=true" class="btn">Download Server (Windows)</a>
-          <a href="https://github.com/Mikeware/SpaceBattleArena" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://www.github.com/Mikeware/SpaceBattleArena/blob/master/bin/SpaceBattle.jar?raw=true" class="btn">Download Client Jar</a>
+          <a href="https://www.github.com/Mikeware/SpaceBattleArena/blob/master/bin/SBAserver.zip?raw=true" class="btn">Download Server (Windows)</a>
+          <a href="https://www.github.com/Mikeware/SpaceBattleArena" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
@@ -71,7 +71,7 @@ implements the Spaceship&lt;?&gt; interface.</li>
   <li>Executes the TextClient’s main method from the SpaceBattle.jar file with the following arguments:
     <ol>
       <li>IP address of the server</li>
-      <li>name of your Ship class</li>
+      <li>name of your Java Ship class</li>
     </ol>
   </li>
 </ol>
