--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h2>A Programming Game in Java for AP CS Students.</h2>
 
         <section id="downloads">
-          <a href="https://github.com/Mikeware/SpaceBattleArena/blob/master/bin/SpaceBattle.jar?raw=true" class="btn">Download Client Jar</a>
-          <a href="https://github.com/Mikeware/SpaceBattleArena/blob/master/bin/SBAserver.zip?raw=true" class="btn">Download Server (Windows)</a>
-          <a href="https://github.com/Mikeware/SpaceBattleArena" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://www.github.com/Mikeware/SpaceBattleArena/blob/master/bin/SpaceBattle.jar?raw=true" class="btn">Download Client Jar</a>
+          <a href="https://www.github.com/Mikeware/SpaceBattleArena/blob/master/bin/SBAserver.zip?raw=true" class="btn">Download Server (Windows)</a>
+          <a href="https://www.github.com/Mikeware/SpaceBattleArena" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
@@ -67,7 +67,7 @@
 
 <p>Finally, allowing the system to be extensible and configurable, means that challenges and difficulty can be directly geared to a specific group of students abilities which can fluctuate from class to class.  Space Battle was our test bed and has proved successful with the multiple different challenges we have run over the past few years.</p>
 
-<p>Space Battle Arena is <a href="LICENSE">licensed</a> under the GPLv2.  <a href="https://github.com/google/gson">Gson</a> is licensed under the Apache license and provided for convenience in the <a href="bin/">bin</a> directory.</p>
+<p>Space Battle Arena is <a href="LICENSE">licensed</a> under the GPLv2.  <a href="https://github.com/google/gson">Gson</a> is licensed under the Apache license and provided for convenience in the <a href="http://github.com/Mikeware/SpaceBattleArena/tree/master/bin/">bin</a> directory.</p>
 
 <h2 id="student-environment">Student Environment</h2>
 <p>It is expected that students have completed a full year of Java programming in high school or just over a semester of programming at the college level.</p>
@@ -76,40 +76,36 @@
 
 <h2 id="documentation">Documentation</h2>
 <ul>
-  <li><a href="client/index.html">Client Setup</a> - <a href="client/jGRASP/index.html">jGRASP</a>, Eclipse
+  <li><a href="client/index.html">Client Setup</a>
     <ul>
-      <li>Add both GSon and SpaceBattle jars to classpath</li>
-      <li>Create a Ship which implements the Spaceship interface.</li>
-      <li>Execute the TextClient class of the SpaceBattle.jar file with two arguments:
-        <ol>
-          <li>IP address of the server</li>
-          <li>name of the Ship class</li>
-        </ol>
-      </li>
+      <li><a href="client/jGRASP/index.html">jGRASP</a></li>
+      <li><a href="client/Eclipse/index.html">Eclipse</a></li>
     </ul>
   </li>
-  <li>Server Setup
+  <li>Server
     <ul>
-      <li>Use the run.bat with the name of a config file</li>
+      <li>Server Setup</li>
+      <li>Server Config</li>
+      <li>Server Usage</li>
     </ul>
   </li>
-  <li>Server Configuration Notes</li>
-  <li>Server GUI Controls</li>
-  <li>Lesson Outlines
+  <li>Lessons
     <ul>
-      <li>Introduction and Setup</li>
-      <li>‘Find the Middle’</li>
-      <li>Shapes in Space</li>
-      <li>Intro to Radar</li>
-      <li>Finite State Machines</li>
+      <li>00 - Intro and Setup</li>
+      <li>01 - Find the Middle</li>
+      <li>02 - Shapes in Space</li>
+      <li>03 - Intro to Radar</li>
+      <li>04 - Finite State Machines</li>
+      <li>05 - Competitions</li>
     </ul>
   </li>
   <li>Guides
     <ul>
-      <li>World Coordinates and Rotations</li>
+      <li>Physics</li>
       <li>Objects</li>
-      <li>Coding Call/Response</li>
+      <li>Coding Paradigm</li>
       <li>Your Ship’s ‘Computer’</li>
+      <li>Commands</li>
     </ul>
   </li>
   <li>Competitions
@@ -119,7 +115,7 @@
       <li>Bauble Hunt SCV</li>
       <li>King of the Bubble
         <ul>
-          <li>King of Space (Variant using King of the Bubble game parameters)</li>
+          <li>King of Space (Variant)</li>
         </ul>
       </li>
     </ul>
