* Import Client Java Docs.

--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,8 @@ implements the Spaceship&lt;?&gt; interface.</li>
   </li>
 </ol>
 
+<p>We also have a complete set of <a href="java_doc/" target="_blank">Java Docs</a> available.</p>
+
       </section>
     </div>
 
