--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <ul>
       <li><a href="client/jGRASP/index.html">jGRASP</a></li>
       <li><a href="client/Eclipse/index.html">Eclipse</a></li>
+      <li><a href="client/java_doc/" target="_blank">Java Docs</a></li>
     </ul>
   </li>
   <li>Server
