--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,7 @@
     <div class="container">
       <section id="main_content">
         <h1 id="client-setup">Client Setup</h1>
+
 <p>Any Java IDE should be able to be used for Space Battle Arena.</p>
 
 <p>We typically use <a href="http://www.jgrasp.org/">jGRASP</a> or <a href="https://eclipse.org/">Eclipse</a>.  Look to the <strong>left</strong> for some walk-throughs on setting up Space Battle using different IDEs.</p>
@@ -65,15 +66,15 @@
 <p>The general process involves:</p>
 
 <ol>
-  <li>Adding both the Gson and SpaceBattle .jar files to your classpath.</li>
-  <li>Creating a Ship class which either extends the BasicSpaceship abstract class OR<br />
+<li>Adding both the Gson and SpaceBattle .jar files to your classpath.</li>
+<li>Creating a Ship class which either extends the BasicSpaceship abstract class OR<br>
 implements the Spaceship&lt;?&gt; interface.</li>
-  <li>Executes the TextClient’s main method from the SpaceBattle.jar file with the following arguments:
-    <ol>
-      <li>IP address of the server</li>
-      <li>name of your Java Ship class</li>
-    </ol>
-  </li>
+<li>Executes the TextClient&#39;s main method from the SpaceBattle.jar file with the following arguments:
+
+<ol>
+<li>IP address of the server</li>
+<li>name of your Java Ship class</li>
+</ol></li>
 </ol>
 
 <p>We also have a complete set of <a href="java_doc/" target="_blank">Java Docs</a> available.</p>
