--- a/dev/SetupGitHubPages.html
+++ b/dev/SetupGitHubPages.html
@@ -50,21 +50,20 @@
 
     <div class="container">
       <section id="main_content">
-        <h2 id="installing-jekyllhttpjekyllrbcom-builder">Installing <a href="http://jekyllrb.com/">Jekyll</a> Builder</h2>
+        <h2 id="installing-jekyll-builder">Installing <a href="http://jekyllrb.com/">Jekyll</a> Builder</h2>
 
 <ol>
-  <li>Install <a href="http://rubyinstaller.org/downloads/">Ruby 2.1.X</a></li>
-  <li>Install DevKet for Ruby 2.1.X under C:\Ruby21\DevKit (assuming C:\Ruby21 was Ruby Install Directory)</li>
-  <li>Open Command Prompt in C:\Ruby21\DevKit directory</li>
-  <li>ruby dk.rb init (ensure says found installed in C:\Ruby21)</li>
-  <li>ruby dk.rb review (ensure says C:\Ruby21 as directory)</li>
-  <li>ruby dk.rb install</li>
-  <li>gem install bundler</li>
-  <li>create <strong>Gemfile</strong> in repository root, with contents
-    <pre><code>source 'https://rubygems.org'
-gem 'github-pages'</code></pre>
-  </li>
-  <li>type ‘bundle install’ in repository root</li>
+<li>Install <a href="http://rubyinstaller.org/downloads/">Ruby 2.1.X</a></li>
+<li>Install DevKet for Ruby 2.1.X under C:\Ruby21\DevKit (assuming C:\Ruby21 was Ruby Install Directory)</li>
+<li>Open Command Prompt in C:\Ruby21\DevKit directory</li>
+<li>ruby dk.rb init (ensure says found installed in C:\Ruby21)</li>
+<li>ruby dk.rb review (ensure says C:\Ruby21 as directory)</li>
+<li>ruby dk.rb install</li>
+<li>gem install bundler</li>
+<li>create <strong>Gemfile</strong> in repository root, with contents
+<pre><code>source &#39;<a href="https://rubygems.org">https://rubygems.org</a>&#39;
+gem &#39;github-pages&#39;</code></pre></li>
+<li>type &#39;bundle install&#39; in repository root</li>
 </ol>
 
       </section>
