--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 <li><a href="server/config.html">Server Config</a></li>
 <li><a href="server/usage.html">Server Usage/Shortcuts</a></li>
 </ul></li>
-<li>Lessons
+<li><a href="lessons/index.html">Lessons</a>
 
 <ul>
-<li>00 - Intro and Setup</li>
+<li>00 - <a href="lessons/intro.html">Intro and Setup</a></li>
 <li>01 - Find the Middle</li>
 <li>02 - Shapes in Space</li>
 <li>03 - Intro to Radar</li>
