Add Find The Middle Lesson Plan.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 <ul>
 <li>00 - <a href="lessons/intro.html">Intro and Setup</a></li>
-<li>01 - Find the Middle</li>
+<li>01 - <a href="lessons/findthemiddle.html">Find the Middle</a></li>
 <li>02 - Shapes in Space</li>
 <li>03 - Intro to Radar</li>
 <li>04 - Finite State Machines</li>
