--- a/lessons/index.html
+++ b/lessons/index.html
@@ -91,7 +91,7 @@
 </tr>
 <tr>
 <td>3 - 4</td>
-<td>Find the Middle</td>
+<td><a href="findthemiddle.html">Find the Middle</a></td>
 </tr>
 <tr>
 <td>5 -  8</td>
@@ -118,6 +118,8 @@
 <p>By the second day you should be distributing the client package to students and walk them through creating a ship with a registration method which can connect to the server and rotate continuously.  By the end of class, all students should be able to connect to the server. </p>
 
 <h2 id="find-the-middle-[days-3---4]"><a name="findthemiddle"></a>Find The Middle [Days 3 - 4]</h2>
+
+<p><a href="findthemiddle.html">Full Plan</a></p>
 
 <p><a href="../games/findthemiddle.html">See Find The Middle Game</a></p>
 
